--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Face Off Model & Cast Management - Talent that drives brands." />
-    <title>Face Off Model & Cast Management</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+ <head>
+ <meta charset="UTF-8" />
+ <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+ <meta name="description" content="Face Off Model & Cast Management - Talent that drives brands." />
+  <title>Face Off Model & Cast Management</title>
+ </head>
+ <body>
+  <div id="root"></div>
+    <!-- 
+      CRITICAL: Load the EmailJS SDK here so the 'window.emailjs' object 
+      is available when the React component (Contact.jsx) initializes. 
+    -->
+    <script 
+      type="text/javascript" 
+      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+    </script>
+  <script type="module" src="/src/main.jsx"></script>
+ </body>
 </html>
