updated the contact and HTML

--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
 <!doctype html>
 <html lang="en">
- <head>
- <meta charset="UTF-8" />
- <meta name="viewport" content="width=device-width, initial-scale=1.0" />
- <meta name="description" content="Face Off Model & Cast Management - Talent that drives brands." />
-  <title>Face Off Model & Cast Management</title>
- </head>
- <body>
-  <div id="root"></div>
-    <!-- 
-      CRITICAL: Load the EmailJS SDK here so the 'window.emailjs' object 
-      is available when the React component (Contact.jsx) initializes. 
-    -->
-    <script 
-      type="text/javascript" 
-      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
-    </script>
-  <script type="module" src="/src/main.jsx"></script>
- </body>
+ <head>
+ <meta charset="UTF-8" />
+ <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+ <meta name="description" content="Face Off Model & Cast Management - Talent that drives brands." />
+  <title>Face Off Model & Cast Management</title>
+  
+  <!-- Load Inter Font (Google Fonts) for aesthetic consistency -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+ </head>
+ <body>
+  <div id="root"></div>
+    <!-- 
+      CRITICAL: Load the EmailJS SDK here so the 'window.emailjs' object 
+      is available when the React component (Contact.jsx) initializes. 
+    -->
+    <script 
+      type="text/javascript" 
+      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+    </script>
+  <script type="module" src="/src/main.jsx"></script>
+ </body>
 </html>
