--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       CRITICAL: Load the EmailJS SDK here so the 'window.emailjs' object 
       is available when the React component (Contact.jsx) initializes. 
     -->
-    <script 
+    <!-- <script 
       type="text/javascript" 
       src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
-    </script>
+    </script> -->
   <script type="module" src="/src/main.jsx"></script>
  </body>
 </html>
