--- a/index.html
+++ b/index.html
@@ -8,14 +8,7 @@
  </head>
  <body>
   <div id="root"></div>
-    <!-- 
-      CRITICAL: Load the EmailJS SDK here so the 'window.emailjs' object 
-      is available when the React component (Contact.jsx) initializes. 
-    -->
-    <!-- <script 
-      type="text/javascript" 
-      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
-    </script> -->
+    <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
  </body>
 </html>
